--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+altgraph==0.17.2
+certifi==2021.10.8
+charset-normalizer==2.0.10
+idna==3.3
 pkg-resources==0.0.0
+requests==2.27.1
 ruamel.yaml==0.17.10
 ruamel.yaml.clib==0.2.6
+urllib3==1.26.8
