--- a/.config/taskfiles/install/Taskfile-python.yml
+++ b/.config/taskfiles/install/Taskfile-python.yml
@@ -95,10 +95,6 @@ tasks:
   venv:node:
     deps:
       - :install:software:python
-    log:
-      start: Setting up a Python 3 `.venv`
-      success: 'Finished setting up `.venv`. Run `. .venv/bin/activate` to load the environment into your shell.'
-      error: Encountered error while setting up `.venv` environment
     cmds:
       - |
         REQUIREMENTS_PATH="$PWD/requirements.txt"
@@ -111,5 +107,9 @@ tasks:
         . .venv/bin/activate
         pip3 install -U pip setuptools
         pip3 install -r "$REQUIREMENTS_PATH"
+    log:
+      error: Encountered error while setting up `.venv` environment
+      start: Setting up a Python 3 `.venv`
+      success: Finished setting up `.venv`. Run `. .venv/bin/activate` to load the environment into your shell.
     sources:
       - requirements.txt
