--- a/package.json
+++ b/package.json
@@ -1,29 +1,25 @@
 {
+  "private": false,
+  "name": "ansibler",
+  "version": "0.0.1",
+  "description": "An Ansible CLI tool that generates platform compatibility data and charts from Molecule test results",
+  "license": "MIT",
   "author": "Brian Zalewski <brian@megabyte.space> (https://megabyte.space)",
-  "blueprint": {
-    "binName": "ansibler",
-    "customPackageName": "ansibler",
-    "description": "An Ansible CLI tool that generates platform compatibility data and charts from Molecule test results",
-    "group": "python",
-    "name": "Ansibler",
-    "overview": "**Ansibler** is a CLI tool meant to accompany Ansible project's that wish to convey accurate information to the public. In an Ansibler workflow, instead of marking every platform as `all` in `meta/main.yml`, we first run Molecule tests and save the logs. Ansibler can take the logs and do a few cool things with them. It generates compatibility chart data in JSON format that you can embed in the `README.md` with [@appnest/readme](https://www.npmjs.com/package/@appnest/readme). After that, you can use Ansibler to automatically generate **accurate** `meta/main.yml` platform data.",
-    "repository": {
-      "github": "https://github.com/ProfessorManhattan/ansibler",
-      "gitlab": "https://gitlab.com/megabyte-labs/python/cli/ansibler"
-    },
-    "slug": "ansibler",
-    "subgroup": "cli",
-    "title": "Ansibler - Compatibility Data Tool for Ansible"
+  "homepage": "https://megabyte.space",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ProfessorManhattan/ansibler.git"
   },
   "bugs": {
     "email": "help@megabyte.space",
     "url": "https://gitlab.com/megabyte-labs/python/cli/ansibler/-/issues"
   },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ],
-    "helpUrl": "https://megabyte.space/docs/contributing/commits"
+  "type": "module",
+  "scripts": {
+    "help": "task --list",
+    "prepare": "task common:husky",
+    "repair": "bash <(curl -sS https://install.doctor/repair)",
+    "start": "bash .config/start.sh"
   },
   "config": {
     "commitizen": {
@@ -31,7 +27,7 @@
     }
   },
   "dependencies": {},
-  "description": "An Ansible CLI tool that generates platform compatibility data and charts from Molecule test results",
+  "optionalDependencies": {},
   "devDependencies": {
     "@washingtondc/development": "^1.0.2",
     "@washingtondc/prettier": "^1.0.0",
@@ -39,26 +35,6 @@
     "eslint-config-strict-mode": "^1.0.0",
     "sleekfast": "^0.0.1"
   },
-  "engines": {
-    "node": ">=14.18.0"
-  },
-  "eslintConfig": {
-    "extends": "eslint-config-strict-mode",
-    "ignorePatterns": [
-      "testdata/**/*"
-    ]
-  },
-  "funding": [
-    {
-      "type": "opencollective",
-      "url": "https://opencollective.com/megabytelabs"
-    },
-    {
-      "type": "patreon",
-      "url": "https://www.patreon.com/ProfessorManhattan"
-    }
-  ],
-  "homepage": "https://megabyte.space",
   "keywords": [
     "advanced",
     "automation",
@@ -80,7 +56,52 @@
     "terminal",
     "washingtondc"
   ],
-  "license": "MIT",
+  "engines": {
+    "node": ">=14.18.0"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "blueprint": {
+    "binName": "ansibler",
+    "customPackageName": "ansibler",
+    "description": "An Ansible CLI tool that generates platform compatibility data and charts from Molecule test results",
+    "group": "python",
+    "name": "Ansibler",
+    "overview": "**Ansibler** is a CLI tool meant to accompany Ansible project's that wish to convey accurate information to the public. In an Ansibler workflow, instead of marking every platform as `all` in `meta/main.yml`, we first run Molecule tests and save the logs. Ansibler can take the logs and do a few cool things with them. It generates compatibility chart data in JSON format that you can embed in the `README.md` with [@appnest/readme](https://www.npmjs.com/package/@appnest/readme). After that, you can use Ansibler to automatically generate **accurate** `meta/main.yml` platform data.",
+    "repository": {
+      "github": "https://github.com/ProfessorManhattan/ansibler",
+      "gitlab": "https://gitlab.com/megabyte-labs/python/cli/ansibler"
+    },
+    "slug": "ansibler",
+    "subgroup": "cli",
+    "title": "Ansibler - Compatibility Data Tool for Ansible",
+    "github_id": "R_kgDOGtz8rQ",
+    "gitlab_project_id": "28229428",
+    "gitlab_group_id": "14289563"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ],
+    "helpUrl": "https://megabyte.space/docs/contributing/commits"
+  },
+  "eslintConfig": {
+    "extends": "eslint-config-strict-mode",
+    "ignorePatterns": [
+      "testdata/**/*"
+    ]
+  },
+  "funding": [
+    {
+      "type": "opencollective",
+      "url": "https://opencollective.com/megabytelabs"
+    },
+    {
+      "type": "patreon",
+      "url": "https://www.patreon.com/ProfessorManhattan"
+    }
+  ],
   "lint-staged": {
     "**/!(logo).(jpg|png)": [
       "task image:compress --"
@@ -117,7 +138,6 @@
       "task image:compress --"
     ]
   },
-  "name": "ansibler",
   "ntl": {
     "descriptions": {
       "help": "Display a list of tasks that can be run via the Taskfile.yml",
@@ -126,12 +146,7 @@
       "start": "Entrypoint for new developers that installs requirements and then runs 'task start'"
     }
   },
-  "optionalDependencies": {},
   "prettier": "@washingtondc/prettier",
-  "private": false,
-  "publishConfig": {
-    "access": "public"
-  },
   "release": {
     "branches": [
       "next",
@@ -145,17 +160,5 @@
       }
     ],
     "extends": "@washingtondc/release"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ProfessorManhattan/ansibler.git"
-  },
-  "scripts": {
-    "help": "task --list",
-    "prepare": "task common:husky",
-    "repair": "bash <(curl -sS https://install.doctor/repair)",
-    "start": "bash .config/start.sh"
-  },
-  "type": "module",
-  "version": "0.0.1"
+  }
 }
